// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ng-add.schematic should install dependencies 1`] = `
"{
  "dependencies": {
    "@angular/cdk": "^21.0.0",
    "@skyux/assets": "^0.0.0-PLACEHOLDER",
    "@skyux/core": "^0.0.0-PLACEHOLDER",
    "@skyux/i18n": "^0.0.0-PLACEHOLDER",
    "@skyux/theme": "^0.0.0-PLACEHOLDER"
  }
}"
`;

exports[`ng-add.schematic should not update workspace config if a workspace has multiple projects 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "projects",
  "projects": {
    "my-project": {
      "projectType": "library",
      "root": "projects/my-project",
      "sourceRoot": "projects/my-project/src",
      "prefix": "lib",
      "architect": {
        "build": {
          "builder": "@angular/build:ng-packagr",
          "configurations": {
            "production": {
              "tsConfig": "projects/my-project/tsconfig.lib.prod.json"
            },
            "development": {
              "tsConfig": "projects/my-project/tsconfig.lib.json"
            }
          },
          "defaultConfiguration": "production"
        },
        "test": {
          "builder": "@angular/build:unit-test",
          "options": {
            "tsConfig": "projects/my-project/tsconfig.spec.json"
          }
        }
      }
    },
    "my-project-showcase": {
      "projectType": "application",
      "schematics": {},
      "root": "projects/my-project-showcase",
      "sourceRoot": "projects/my-project-showcase/src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular/build:application",
          "options": {
            "browser": "projects/my-project-showcase/src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "projects/my-project-showcase/tsconfig.app.json",
            "assets": [
              {
                "glob": "**/*",
                "input": "projects/my-project-showcase/public"
              }
            ],
            "styles": [
              "projects/my-project-showcase/src/styles.css"
            ]
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kB",
                  "maximumError": "1MB"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "4kB",
                  "maximumError": "8kB"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular/build:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "my-project-showcase:build:production"
            },
            "development": {
              "buildTarget": "my-project-showcase:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "test": {
          "builder": "@angular/build:unit-test"
        }
      }
    }
  }
}
"
`;

exports[`ng-add.schematic should update workspace config if a workspace only has one project 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "projects",
  "projects": {
    "my-project": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss"
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular/build:application",
          "options": {
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              {
                "glob": "**/*",
                "input": "public"
              }
            ],
            "styles": [
              "src/styles.scss",
              "@skyux/theme/css/sky.css",
              "@skyux/theme/css/themes/modern/styles.css"
            ],
            "allowedCommonJsDependencies": [
              "@skyux/icons",
              "autonumeric",
              "dom-autoscroller",
              "dragula",
              "fontfaceobserver",
              "intl-tel-input",
              "moment"
            ]
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kB",
                  "maximumError": "1MB"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "4kB",
                  "maximumError": "8kB"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular/build:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "my-project:build:production"
            },
            "development": {
              "buildTarget": "my-project:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "test": {
          "builder": "@angular-devkit/build-angular:karma",
          "options": {
            "polyfills": [
              "zone.js",
              "zone.js/testing"
            ],
            "styles": [
              "src/styles.scss",
              "@skyux/theme/css/sky.css",
              "@skyux/theme/css/themes/modern/styles.css"
            ]
          }
        }
      }
    }
  }
}"
`;
